--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,10 @@
 @import '../../styles/variables';
+@import '../../styles/media';
 
 .header {
-	position: relative;
-	overflow-x: hidden;
+	// position: relative;
+	// overflow-x: hidden;
+	// z-index: 1000;
 }
 
 .header__wrapper {
@@ -10,7 +12,18 @@
 	align-items: center;
 	justify-content: space-between;
 
-	padding: 30px 0;
+	padding: 10px 0;
+	margin-bottom: 10px;
+
+	border-bottom: 1px solid rgba(225, 225, 225, 15%);
+
+	@media (min-width: $tablet) {
+		margin-bottom: 30px;
+	}
+
+	@media (min-width: $desktop) {
+		padding: 20px 0;
+	}
 }
 
 .header__logo {
@@ -24,6 +37,8 @@
 	width: 70%;
 	height: 100vh;
 
+	overflow-y: scroll;
+
 	transform: translate(100%, 0);
 	transition: transform 300ms $cubic-bezier;
 
@@ -33,6 +48,19 @@
 	// align-items: center;
 
 	// width: 50%;
+
+	@media (min-width: $tablet) {
+		position: inherit;
+
+		display: flex;
+
+		justify-content: space-between;
+		align-items: center;
+
+		height: auto;
+
+		transform: translate(0, 0);
+	}
 }
 
 .backdrop__open {
@@ -54,18 +82,105 @@
 	transform: translate(0, 0);
 }
 
-.header__list {
-	// display: flex;
+.header__nav {
+	margin-bottom: 30px;
 
-	// gap: 20px;
+	@media (min-width: $tablet) {
+		margin-bottom: 0;
+	}
+}
+
+.header__list {
+	font-size: $mobile-sec-font-size;
+	margin-top: 20px;
+
+	@media (min-width: $tablet) {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 30px;
+
+		font-size: 15px;
+
+		margin-top: 0;
+	}
+
+	@media (min-width: $desktop) {
+		font-size: 20px;
+	}
+}
+
+.header__item {
+	border-bottom: 1px solid rgba(225, 225, 225, 15%);
 }
 
 .header__link {
-	padding: 30px 0;
+	display: block;
+
+	padding: 20px 0 20px 20px;
+
 	transition: color 300ms $cubic-bezier;
+
+	@media (min-width: $tablet) {
+		padding: 0;
+	}
 
 	&:hover,
 	&:focus {
 		color: $link-hover-color;
 	}
+}
+
+// auth links
+.header__auth__wrapp {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+
+	margin-bottom: 50px;
+
+	font-size: $mobile-sec-font-size;
+
+	@media (min-width: $tablet) {
+		font-size: 15px;
+
+		margin-bottom: 0;
+	}
+
+	@media (min-width: $desktop) {
+		font-size: 18px;
+	}
+}
+
+.header__auth__btn {
+	padding: 5px 20px;
+
+	border: 1px solid $card-border-color;
+	border-radius: 5px;
+
+	box-shadow: inset 0px 0px 4px rgb(139, 137, 137);
+	transition: box-shadow 300ms $cubic-bezier;
+
+	@media (min-width: $tablet) {
+		padding: 5px 10px;
+	}
+
+	@media (min-width: $desktop) {
+		padding: 5px 20px;
+	}
+
+	&:hover,
+	&:focus {
+		box-shadow: inset 0px 0px 10px $card-hover-color;
+	}
+}
+
+.margin-10 {
+	margin-right: 10px;
+}
+
+.close__btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
 }
