fixed header styles, changed variables

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import './styles/_variables.scss';
+@import './styles/variables/fonts';
+@import './styles/variables/colors';
 @import './styles/reset';
 @import './styles/base';
 
