--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -7,8 +7,10 @@
 		align-items: center;
 	}
 
-	display: grid;
-	gap: 30px;
+	& {
+		display: grid;
+		gap: 30px;
+	}
 
 	@media (min-width: $mobile) {
 		grid-template-columns: repeat(2, 1fr);
