--- a/src/components/MainButton/main-button.scss
+++ b/src/components/MainButton/main-button.scss
@@ -15,10 +15,13 @@
 
 	@media (min-width: $tablet) {
 		padding: 5px 10px;
+		font-size: 1.2rem;
 	}
 
 	@media (min-width: $desktop) {
 		padding: 5px 20px;
+
+		font-size: 1.5rem;
 	}
 
 	&:hover,
