--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ body {
 
 .section {
 	padding: 20px 0;
+	box-shadow: inset 0 -20px 60px -30px $card-hover-color;
 
 	@media (min-width: $tablet) {
 		padding: 40px 0;
