added styles for cart page

--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -9,3 +9,5 @@ $card-hover-color: rgba(140, 69, 225, 40%);
 $link-hover-color: rgba(140, 69, 225, 90%);
 
 $shadow-btn-color: rgb(139, 137, 137);
+
+$red-color: #ef6065;
