--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -34,6 +34,7 @@ input[type='number'] {
 }
 
 .card_img {
+	margin-bottom: 10px;
 	@media (min-width: $mobile) {
 		height: 140px;
 		object-fit: cover;
@@ -49,5 +50,19 @@ input[type='number'] {
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
 
+	margin-bottom: 10px;
+
 	color: $secondary-font-color;
+}
+
+.card__price {
+	font-size: 1rem;
+	margin-bottom: 10px;
+}
+
+.card__button {
+	display: block;
+	width: 100%;
+
+	font-size: 1rem;
 }
