--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -11,3 +11,4 @@ $link-hover-color: rgba(140, 69, 225, 90%);
 $shadow-btn-color: rgb(139, 137, 137);
 
 $red-color: #ef6065;
+$green-color: #56f264;
