added pre-items in categories, and btn add to cart on item page

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,3 +29,16 @@ body {
 		padding: 60px 0;
 	}
 }
+
+.footer {
+	padding: 20px 0;
+	border-top: 1px solid $secondary-bg-color;
+
+	@media (min-width: $tablet) {
+		padding: 40px 0;
+	}
+
+	@media (min-width: $desktop) {
+		padding: 60px 0;
+	}
+}
