added additional info to orders, changed styles, fixed routes

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -145,7 +145,7 @@
 	justify-content: space-around;
 	align-items: center;
 
-	margin-bottom: 50px;
+	margin: 0 5px 50px 5px;
 
 	font-size: $mobile-sec-font-size;
 
