--- a/src/components/CategoriesListSlider/categories-list-slider.scss
+++ b/src/components/CategoriesListSlider/categories-list-slider.scss
@@ -1,7 +1,13 @@
+@import '../../styles/media';
+
 .category__list {
 	display: flex;
 
 	gap: 40px;
 
 	overflow-x: scroll;
+
+	@media (min-width: $tablet) {
+		overflow-x: auto;
+	}
 }
