--- a/src/components/CartItem/cart-item.scss
+++ b/src/components/CartItem/cart-item.scss
@@ -12,6 +12,26 @@
 	margin-bottom: 20px;
 }
 
+.card__spinner {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	width: 100%;
+	height: 100%;
+	background-color: rgba(164, 165, 167, 0.179);
+
+	visibility: hidden;
+}
+
+.card__spinner--visible {
+	visibility: inherit;
+}
+
 .card__title__wrapp {
 	display: flex;
 
@@ -34,6 +54,7 @@
 		font-size: 1.5rem;
 	}
 }
+
 .cart__icon {
 	font-size: 1.5rem;
 	color: $main-font-color;
@@ -43,6 +64,7 @@
 	display: flex;
 	justify-content: space-between;
 }
+
 .cart__price {
 	font-size: 0.8rem;
 
@@ -90,6 +112,7 @@
 .delete__icon {
 	font-size: 1.3rem;
 }
+
 .show {
 	display: block;
 }
