--- a/src/components/MainButton/main-button.scss
+++ b/src/components/MainButton/main-button.scss
@@ -5,11 +5,16 @@
 .main-button {
   background-color: $btn-main-color;
   color: $btn-main-text-color;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 12px 24px;
   border: none;
   border-radius: 8px;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 600;
+  text-align: center;
   cursor: pointer;
   transition:
     background-color 0.3s ease,
@@ -23,7 +28,7 @@
   @media (min-width: $desktop) {
     padding: 5px 20px;
 
-    font-size: 1.1rem;
+    font-size: 0.9rem;
   }
 
   &:hover,
