--- a/src/components/Sections/InfoSection/InfoSection.scss
+++ b/src/components/Sections/InfoSection/InfoSection.scss
@@ -2,32 +2,35 @@
 @import '../../../styles/media';
 
 .info__wrapper {
-	text-align: left;
+  text-align: left;
 
-	font-size: 2rem;
+  font-size: 2rem;
 
-	@media (min-width: $tablet) {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
+  @media (min-width: $tablet) {
+    // display: flex;
+    // align-items: center;
+    // justify-content: space-between;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .info__right {
-	@media (min-width: $tablet) {
-		margin-left: 70px;
-	}
+  @media (min-width: $tablet) {
+    margin-left: 70px;
+  }
 }
 
 .info__btn {
-	display: block;
-	width: 100%;
+  display: inline-block;
+  margin-left: auto;
 
-	@media (min-width: $tablet) {
-		font-size: 2rem;
-	}
+  @media (min-width: $tablet) {
+    font-size: 2rem;
+  }
 
-	@media (min-width: $desktop) {
-		font-size: 3rem;
-	}
+  @media (min-width: $desktop) {
+    font-size: 3rem;
+  }
 }
