--- a/src/components/SlickCarousel/SlickCarousel.scss
+++ b/src/components/SlickCarousel/SlickCarousel.scss
@@ -20,11 +20,12 @@
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
-  width: 300px !important;
+  width: 400px !important;
   margin: 0 auto !important;
 }
 
 .slider__img {
+  object-fit: contain;
 }
 
 .slick-prev:before {
