--- a/src/components/Sections/InfoSection/InfoSection.scss
+++ b/src/components/Sections/InfoSection/InfoSection.scss
@@ -1,36 +1,43 @@
 @import '../../../styles/variables/colors';
 @import '../../../styles/media';
 
-.info__wrapper {
-  text-align: left;
-
+.info__title {
+  text-align: center;
+  font-weight: 700;
   font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.info__item {
+  margin-bottom: 40px;
 
   @media (min-width: $tablet) {
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
+    display: flex;
+    gap: 20px;
 
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+    }
   }
 }
 
-.info__right {
+.info__subtitle {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 20px;
+
   @media (min-width: $tablet) {
-    margin-left: 70px;
+    font-size: 1.2rem;
   }
 }
 
-.info__btn {
-  display: inline-block;
-  margin-left: auto;
+.info__text {
+  margin-bottom: 20px;
+}
 
+.info__img {
+  width: 100%;
   @media (min-width: $tablet) {
-    font-size: 2rem;
-  }
-
-  @media (min-width: $desktop) {
-    font-size: 3rem;
+    width: 50%;
   }
 }
