--- a/src/components/SlickCarousel/SlickCarousel.scss
+++ b/src/components/SlickCarousel/SlickCarousel.scss
@@ -2,14 +2,11 @@
 @import '../../styles/media';
 
 .slider__container {
+  width: 100%;
+
   max-width: 100%;
   overflow: hidden;
   margin: 0 auto;
-
-  border-top: 1px solid $main-font-color;
-  border-bottom: 1px solid $main-font-color;
-
-  box-shadow: inset 0 0 10px $main-font-color;
 
   @media (min-width: $tablet) {
     overflow: initial;
@@ -17,15 +14,16 @@
 }
 
 .slider__img__wrapp {
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  width: 400px !important;
-  margin: 0 auto !important;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider__img {
-  object-fit: contain;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .slick-prev:before {
