--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -20,3 +20,18 @@
     padding: 0 20px;
   }
 }
+
+.staff__container {
+  margin: 0 auto;
+  padding: 0 10px;
+
+  @media (min-width: $mobile) {
+    max-width: $mobile;
+  }
+
+  @media (min-width: $tablet) {
+    max-width: $staff-tablet;
+
+    padding: 0 15px;
+  }
+}
