--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -1,16 +1,23 @@
 html,
 body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
-	flex: 1;
+  flex: 1;
+}
+
+.loading__container {
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
