--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -111,6 +111,10 @@
 }
 
 .acc__data {
+  @media (max-width: 1200px) {
+    position: initial;
+  }
+
   position: fixed;
   bottom: 200px;
   left: 100px;
