--- a/src/pages/Admin/admin.scss
+++ b/src/pages/Admin/admin.scss
@@ -1,30 +1,86 @@
 @import '../../styles/variables/colors';
+@import '../../styles/media';
 
 .admin__wrapper {
-	display: grid;
-	grid-template-columns: 1fr 2fr;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .admin__margin {
-	margin-right: 30px;
+  margin-right: 30px;
 }
 
 .manage__title {
-	margin-bottom: 30px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .manage__container {
-	padding: 20px;
+  padding: 20px;
 
-	border: 1px solid $secondary-bg-color;
-	border-radius: 5px;
+  border: 1px solid $secondary-bg-color;
+  border-radius: 5px;
 
-	margin-bottom: 50px;
+  //   margin-bottom: 50px;
+}
+
+.manage__unit {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+
+  margin-bottom: 30px;
 }
 
 .manage__unit__title {
-	font-size: 1.5rem;
-	font-weight: 700;
+  text-align: center;
 
-	margin-bottom: 10px;
+  font-size: 1.5rem;
+  font-weight: 700;
+
+  margin-bottom: 10px;
+}
+.manage__select {
+  margin-bottom: 20px;
+}
+.choose__file {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.manage__button {
+  background-color: $btn-main-color;
+  color: $btn-main-text-color;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 8px;
+  font-size: 3rem;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    transform 0.2s ease;
+
+  @media (min-width: $tablet) {
+    padding: 12px 24px;
+    font-size: 1rem;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 12px 24px;
+
+    font-size: 1rem;
+  }
+
+  &:hover,
+  &:focus {
+    background-color: $btn-main-hover-color;
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px $btn-box-shadow-color;
+  }
 }
