--- a/src/components/StaffOrdersTable/staff-orders-table.scss
+++ b/src/components/StaffOrdersTable/staff-orders-table.scss
@@ -2,7 +2,8 @@
 @import '../../styles/variables/colors';
 .font {
   font-family: $main-font;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .status__styles {
@@ -23,5 +24,5 @@
   align-items: center;
   justify-content: center;
 
-  font-size: 2.7rem;
+  font-size: 1.5rem;
 }
