--- a/src/components/CartItem/cart-item.scss
+++ b/src/components/CartItem/cart-item.scss
@@ -26,7 +26,6 @@
 
   width: 100%;
   height: 100%;
-  //   background-color: rgba(164, 165, 167, 0.179);
 
   visibility: hidden;
 }
@@ -42,11 +41,14 @@
 }
 
 .cart__img {
-  width: 100px;
   object-fit: cover;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
 
   @media (min-width: $tablet) {
     width: 150px;
+    height: 150px;
   }
 }
 
