--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -23,7 +23,6 @@
   justify-content: space-between;
 
   padding: 10px 0;
-  margin-bottom: 10px;
 
   border-bottom: 1px solid $secondary-bg-color;
 
@@ -34,7 +33,8 @@
 }
 
 .header__logo {
-  font-weight: 700;
+  object-fit: cover;
+  width: 150px;
 }
 
 .header__mobile__wrapper {
@@ -159,13 +159,20 @@
 }
 .header__cart__counter {
   position: absolute;
-  top: -6px;
+  top: -1px;
   right: -25px;
 
   width: 20px;
   height: 20px;
 
   font-size: 0.7rem;
+}
+.header__user__profile__icon {
+  transition: transform $delay-animation $cubic-bezier;
+  &:hover,
+  &:focus {
+    transform: scale(1.2);
+  }
 }
 // auth links
 .header__auth__wrapp {
