--- a/src/pages/Cart/cart.scss
+++ b/src/pages/Cart/cart.scss
@@ -4,19 +4,20 @@
 .container__cart {
   position: relative;
   margin: 20px auto;
-  padding: 20px 10px;
+  padding: 40px 10px;
 
   @media (min-width: $mobile) {
     max-width: $mobile;
   }
 
   @media (min-width: $tablet) {
-    max-width: $desktop;
+    max-width: $tablet;
 
-    padding: 0 15px;
+    padding: 20px 15px;
   }
 
   @media (min-width: $desktop) {
+    max-width: $desktop;
     display: grid;
     grid-template-columns: 1fr 0.5fr;
     gap: 30px;
@@ -27,17 +28,17 @@
 
 .back__from__cart {
   position: absolute;
-  top: -35px;
+  top: -25px;
   left: 13px;
   font-size: 2rem;
 
   @media (min-width: $tablet) {
-    top: -45px;
+    top: -35px;
   }
 
   @media (min-width: $desktop) {
     top: 0;
-    left: -30px;
+    left: -50px;
   }
 }
 
